[project]
name = "comfyui-nkd-preview-tools"
description = "Preview and masking tools for ComfyUI: floating popup preview window (multi-monitor friendly) and a procedural mask painter that bridges any IMAGE source into the native mask editor."
version = "2.1.0"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Nekodificador/ComfyUI-NKD-Preview-Tools"

[tool.comfy]
PublisherId = "nekodificador"
DisplayName = "NKD Preview Tools"
Icon = ""
